--- a/animators/animators.html
+++ b/animators/animators.html
@@ -277,7 +277,8 @@
                 </div>
                 <div class="section__elements nomt">
                     <div class="section__personage">
-                        <img class="section__personage-stars" src="img/stars-bg-min.png" alt="звездочки">
+                        <img class="section__personage-stars-s" src="img/stars-s.png" alt="звездочки">
+                        <img class="section__personage-stars-b" src="img/stars-b.png" alt="звездочки">
                         <div class="section__personage-photo">
                             <div class="section__personage-circle-outer">
                                 <div class="section__personage-mask">
@@ -288,10 +289,11 @@
                             </div>
                         </div>
                         <h3 class="section__personage-name">Куклы LOL</h3>
-                        <a href="#" class="button yellow-btn small-btn">подробее</a>
+                        <a href="/animators/inner.html" class="button yellow-btn small-btn">подробее</a>
                     </div>
                     <div class="section__personage">
-                        <img class="section__personage-stars" src="img/stars-bg-min.png" alt="звездочки">
+                        <img class="section__personage-stars-s" src="img/stars-s.png" alt="звездочки">
+                        <img class="section__personage-stars-b" src="img/stars-b.png" alt="звездочки">
                         <div class="section__personage-photo">
                             <div class="section__personage-circle-outer">
                                 <div class="section__personage-mask">
@@ -301,11 +303,12 @@
                                 </div>
                             </div>
                         </div>
-                        <h3 class="section__personage-name">Трансформеры</h3>
-                        <a href="#" class="button yellow-btn small-btn">подробее</a>
+                        <h3 class="section__personage-name">Куклы LOL</h3>
+                        <a href="/animators/inner.html" class="button yellow-btn small-btn">подробее</a>
                     </div>
                     <div class="section__personage">
-                        <img class="section__personage-stars" src="img/stars-bg-min.png" alt="звездочки">
+                        <img class="section__personage-stars-s" src="img/stars-s.png" alt="звездочки">
+                        <img class="section__personage-stars-b" src="img/stars-b.png" alt="звездочки">
                         <div class="section__personage-photo">
                             <div class="section__personage-circle-outer">
                                 <div class="section__personage-mask">
@@ -315,10 +318,9 @@
                                 </div>
                             </div>
                         </div>
-                        <h3 class="section__personage-name">Холодное сердце</h3>
-                        <a href="#" class="button yellow-btn small-btn">подробее</a>
+                        <h3 class="section__personage-name">Куклы LOL</h3>
+                        <a href="/animators/inner.html" class="button yellow-btn small-btn">подробее</a>
                     </div>
-                </div>
                 <div class="section__programs-btn-wrap mb">
                     <a href="#" class="button transp-btn big-btn yellow"><img src="img/mask-ico-min.png" alt="Иконка маски"> Смотреть всех персонажей</a>
                 </div>
