--- a/animators/index.html
+++ b/animators/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/keyframes.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
@@ -252,31 +253,29 @@
                                 </div>
                             </div>
                             <div class="swiper-slide">
-                                <div class="section__slide section__slide_gold">
-                                    <h3 class="section__slide-title dark">Два дешевле!</h3>
-                                    <div class="section__slide-offer white">
-                                        <span class="section__slide-per">-25%</span>
-                                        <p>На второй праздник
-                                            в течении года</p>
+                                <div class="personages__offer">
+                                    <h3 class="personages__offer-title dark">ДВА ДЕШЕВЛЕ! <img src="img/o1-min.png" alt="Коробочка"></h3>
+                                    <div class="personages__offer-discount">
+                                        <span class="personages__offer-percentage">-10%</span>
+                                        <span class="personages__offer-desc">На второй праздник в течении года</span>
                                     </div>
-                                    <h3 class="section__slide-sub dark">
-                                        Введите ваше имя и номер телефона:
-                                    </h3>
-                                    <div class="section__slide-form">
-                                        <form class="questions__form">
-                                            <div class="questions__form-col">
-                                                <input placeholder="Имя" type="text" name="name">
-                                                <p>
+                                    <form action="#" class="personages__form">
+                                        <p class="personages__form-title dark">Введите ваше имя и номер телефона:</p>
+                                        <div class="personages__form-inputs">
+                                            <div class="personages__form-col">
+                                                <input type="text" placeholder="Ваше имя">
+                                                <p class="dark">
                                                     Нажимая кнопку, вы соглашаетесь
-                                                    на передачу и хранение персональных данных
+                                                    на передачу и хранение
+                                                    персональных данных
                                                 </p>
                                             </div>
-                                            <div class="questions__form-col">
-                                                <input placeholder="Телефон" type="tel" name="tel">
-                                                <a href="#" class="button button__inform small-btn violet-btn open__thx">Заказать праздник</a>
+                                            <div class="personages__form-col">
+                                                <input type="tel" placeholder="Ваш телефон">
+                                                <input class="button small-btn violet-btn open__thx" type="submit" value="Заказать праздникк">
                                             </div>
-                                        </form>
-                                    </div>
+                                        </div>
+                                    </form>
                                 </div>
                             </div>
                         </div>
@@ -299,7 +298,8 @@
                     </div>
                     <div class="section__elements">
                         <div class="section__personage">
-                            <img class="section__personage-stars" src="img/stars-bg-min.png" alt="звездочки">
+                            <img class="section__personage-stars-s" src="img/stars-s.png" alt="звездочки">
+                            <img class="section__personage-stars-b" src="img/stars-b.png" alt="звездочки">
                             <div class="section__personage-photo">
                                 <div class="section__personage-circle-outer">
                                     <div class="section__personage-mask">
@@ -313,7 +313,8 @@
                             <a href="/animators/inner.html" class="button yellow-btn small-btn">подробее</a>
                         </div>
                         <div class="section__personage">
-                            <img class="section__personage-stars" src="img/stars-bg-min.png" alt="звездочки">
+                            <img class="section__personage-stars-s" src="img/stars-s.png" alt="звездочки">
+                            <img class="section__personage-stars-b" src="img/stars-b.png" alt="звездочки">
                             <div class="section__personage-photo">
                                 <div class="section__personage-circle-outer">
                                     <div class="section__personage-mask">
@@ -327,7 +328,8 @@
                             <a href="/animators/inner.html" class="button yellow-btn small-btn">подробее</a>
                         </div>
                         <div class="section__personage">
-                            <img class="section__personage-stars" src="img/stars-bg-min.png" alt="звездочки">
+                            <img class="section__personage-stars-s" src="img/stars-s.png" alt="звездочки">
+                            <img class="section__personage-stars-b" src="img/stars-b.png" alt="звездочки">
                             <div class="section__personage-photo">
                                 <div class="section__personage-circle-outer">
                                     <div class="section__personage-mask">
@@ -341,7 +343,8 @@
                             <a href="/animators/inner.html" class="button yellow-btn small-btn">подробее</a>
                         </div>
                         <div class="section__personage">
-                            <img class="section__personage-stars" src="img/stars-bg-min.png" alt="звездочки">
+                            <img class="section__personage-stars-s" src="img/stars-s.png" alt="звездочки">
+                            <img class="section__personage-stars-b" src="img/stars-b.png" alt="звездочки">
                             <div class="section__personage-photo">
                                 <div class="section__personage-circle-outer">
                                     <div class="section__personage-mask">
@@ -355,7 +358,8 @@
                             <a href="/animators/inner.html" class="button yellow-btn small-btn">подробее</a>
                         </div>
                         <div class="section__personage">
-                            <img class="section__personage-stars" src="img/stars-bg-min.png" alt="звездочки">
+                            <img class="section__personage-stars-s" src="img/stars-s.png" alt="звездочки">
+                            <img class="section__personage-stars-b" src="img/stars-b.png" alt="звездочки">
                             <div class="section__personage-photo">
                                 <div class="section__personage-circle-outer">
                                     <div class="section__personage-mask">
@@ -369,7 +373,8 @@
                             <a href="/animators/inner.html" class="button yellow-btn small-btn">подробее</a>
                         </div>
                         <div class="section__personage">
-                            <img class="section__personage-stars" src="img/stars-bg-min.png" alt="звездочки">
+                            <img class="section__personage-stars-s" src="img/stars-s.png" alt="звездочки">
+                            <img class="section__personage-stars-b" src="img/stars-b.png" alt="звездочки">
                             <div class="section__personage-photo">
                                 <div class="section__personage-circle-outer">
                                     <div class="section__personage-mask">
@@ -383,8 +388,8 @@
                             <a href="/animators/inner.html" class="button yellow-btn small-btn">подробее</a>
                         </div>
                         <div class="section__personage">
-                            <img class="section__personage-stars" src="img/stars-bg-min.png" alt="звездочки">
-                            <img class="section__personage-stars" src="img/stars-bg-min.png" alt="звездочки">
+                            <img class="section__personage-stars-s" src="img/stars-s.png" alt="звездочки">
+                            <img class="section__personage-stars-b" src="img/stars-b.png" alt="звездочки">
                             <div class="section__personage-photo">
                                 <div class="section__personage-circle-outer">
                                     <div class="section__personage-mask">
@@ -398,7 +403,8 @@
                             <a href="/animators/inner.html" class="button yellow-btn small-btn">подробее</a>
                         </div>
                         <div class="section__personage">
-                            <img class="section__personage-stars" src="img/stars-bg-min.png" alt="звездочки">
+                            <img class="section__personage-stars-s" src="img/stars-s.png" alt="звездочки">
+                            <img class="section__personage-stars-b" src="img/stars-b.png" alt="звездочки">
                             <div class="section__personage-photo">
                                 <div class="section__personage-circle-outer">
                                     <div class="section__personage-mask">
@@ -412,7 +418,8 @@
                             <a href="/animators/inner.html" class="button yellow-btn small-btn">подробее</a>
                         </div>
                         <div class="section__personage">
-                            <img class="section__personage-stars" src="img/stars-bg-min.png" alt="звездочки">
+                            <img class="section__personage-stars-s" src="img/stars-s.png" alt="звездочки">
+                            <img class="section__personage-stars-b" src="img/stars-b.png" alt="звездочки">
                             <div class="section__personage-photo">
                                 <div class="section__personage-circle-outer">
                                     <div class="section__personage-mask">
@@ -766,75 +773,87 @@
                     </div>
                     <div class="section__elements">
                         <div class="section__gift">
-                            <img src="" alt="" class="section__personage-stars">
-                            <div class="section__gift-circle-outer">
-                                <div class="section__gift-mask">
-                                    <div class="section__gift-circle">
-                                        <img src="img/ice-cream-min.png" alt="Фото товара">
+                            <a href="#" class="section__gift-link">
+                                <img src="" alt="" class="section__personage-stars">
+                                <div class="section__gift-circle-outer">
+                                    <div class="section__gift-mask">
+                                        <div class="section__gift-circle">
+                                            <img src="img/ice-cream-min.png" alt="Фото товара">
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <a href="#" class="section__gift-link">Товар</a>
+                                <span class="section__gift-name">Товар</span>
+                            </a>
                             <sapn class="section__gift-price">2990 р</sapn>
                         </div>
                         <div class="section__gift">
-                            <img src="" alt="" class="section__personage-stars">
-                            <div class="section__gift-circle-outer">
-                                <div class="section__gift-mask">
-                                    <div class="section__gift-circle">
-                                        <img src="img/ice-cream-min.png" alt="Фото товара">
+                            <a href="#" class="section__gift-link">
+                                <img src="" alt="" class="section__personage-stars">
+                                <div class="section__gift-circle-outer">
+                                    <div class="section__gift-mask">
+                                        <div class="section__gift-circle">
+                                            <img src="img/ice-cream-min.png" alt="Фото товара">
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <a href="#" class="section__gift-link">Товар</a>
+                                <span class="section__gift-name">Товар</span>
+                            </a>
                             <sapn class="section__gift-price">2990 р</sapn>
                         </div>
                         <div class="section__gift">
-                            <img src="" alt="" class="section__personage-stars">
-                            <div class="section__gift-circle-outer">
-                                <div class="section__gift-mask">
-                                    <div class="section__gift-circle">
-                                        <img src="img/ice-cream-min.png" alt="Фото товара">
+                            <a href="#" class="section__gift-link">
+                                <img src="" alt="" class="section__personage-stars">
+                                <div class="section__gift-circle-outer">
+                                    <div class="section__gift-mask">
+                                        <div class="section__gift-circle">
+                                            <img src="img/ice-cream-min.png" alt="Фото товара">
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <a href="#" class="section__gift-link">Товар</a>
+                                <span class="section__gift-name">Товар</span>
+                            </a>
                             <sapn class="section__gift-price">2990 р</sapn>
                         </div>
                         <div class="section__gift">
-                            <img src="" alt="" class="section__personage-stars">
-                            <div class="section__gift-circle-outer">
-                                <div class="section__gift-mask">
-                                    <div class="section__gift-circle">
-                                        <img src="img/ice-cream-min.png" alt="Фото товара">
+                            <a href="#" class="section__gift-link">
+                                <img src="" alt="" class="section__personage-stars">
+                                <div class="section__gift-circle-outer">
+                                    <div class="section__gift-mask">
+                                        <div class="section__gift-circle">
+                                            <img src="img/ice-cream-min.png" alt="Фото товара">
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <a href="#" class="section__gift-link">Товар</a>
+                                <span class="section__gift-name">Товар</span>
+                            </a>
                             <sapn class="section__gift-price">2990 р</sapn>
                         </div>
                         <div class="section__gift">
-                            <img src="" alt="" class="section__personage-stars">
-                            <div class="section__gift-circle-outer">
-                                <div class="section__gift-mask">
-                                    <div class="section__gift-circle">
-                                        <img src="img/ice-cream-min.png" alt="Фото товара">
+                            <a href="#" class="section__gift-link">
+                                <img src="" alt="" class="section__personage-stars">
+                                <div class="section__gift-circle-outer">
+                                    <div class="section__gift-mask">
+                                        <div class="section__gift-circle">
+                                            <img src="img/ice-cream-min.png" alt="Фото товара">
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <a href="#" class="section__gift-link">Товар</a>
+                                <span class="section__gift-name">Товар</span>
+                            </a>
                             <sapn class="section__gift-price">2990 р</sapn>
                         </div>
                         <div class="section__gift">
-                            <img src="" alt="" class="section__personage-stars">
-                            <div class="section__gift-circle-outer">
-                                <div class="section__gift-mask">
-                                    <div class="section__gift-circle">
-                                        <img src="img/ice-cream-min.png" alt="Фото товара">
+                            <a href="#" class="section__gift-link">
+                                <img src="" alt="" class="section__personage-stars">
+                                <div class="section__gift-circle-outer">
+                                    <div class="section__gift-mask">
+                                        <div class="section__gift-circle">
+                                            <img src="img/ice-cream-min.png" alt="Фото товара">
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <a href="#" class="section__gift-link">Товар</a>
+                                <span class="section__gift-name">Товар</span>
+                            </a>
                             <sapn class="section__gift-price">2990 р</sapn>
                         </div>
                     </div>
