--- a/animators/persomages.html
+++ b/animators/persomages.html
@@ -98,7 +98,8 @@
                 </div>
                 <div class="section__elements nomt">
                     <div class="section__personage">
-                        <img class="section__personage-stars" src="img/stars-bg-min.png" alt="звездочки">
+                        <img class="section__personage-stars-s" src="img/stars-s.png" alt="звездочки">
+                        <img class="section__personage-stars-b" src="img/stars-b.png" alt="звездочки">
                         <div class="section__personage-photo">
                             <div class="section__personage-circle-outer">
                                 <div class="section__personage-mask">
@@ -109,10 +110,11 @@
                             </div>
                         </div>
                         <h3 class="section__personage-name">Куклы LOL</h3>
-                        <a href="#" class="button yellow-btn small-btn">подробее</a>
+                        <a href="/animators/inner.html" class="button yellow-btn small-btn">подробее</a>
                     </div>
                     <div class="section__personage">
-                        <img class="section__personage-stars" src="img/stars-bg-min.png" alt="звездочки">
+                        <img class="section__personage-stars-s" src="img/stars-s.png" alt="звездочки">
+                        <img class="section__personage-stars-b" src="img/stars-b.png" alt="звездочки">
                         <div class="section__personage-photo">
                             <div class="section__personage-circle-outer">
                                 <div class="section__personage-mask">
@@ -122,11 +124,12 @@
                                 </div>
                             </div>
                         </div>
-                        <h3 class="section__personage-name">Трансформеры</h3>
-                        <a href="#" class="button yellow-btn small-btn">подробее</a>
+                        <h3 class="section__personage-name">Куклы LOL</h3>
+                        <a href="/animators/inner.html" class="button yellow-btn small-btn">подробее</a>
                     </div>
                     <div class="section__personage">
-                        <img class="section__personage-stars" src="img/stars-bg-min.png" alt="звездочки">
+                        <img class="section__personage-stars-s" src="img/stars-s.png" alt="звездочки">
+                        <img class="section__personage-stars-b" src="img/stars-b.png" alt="звездочки">
                         <div class="section__personage-photo">
                             <div class="section__personage-circle-outer">
                                 <div class="section__personage-mask">
@@ -136,11 +139,12 @@
                                 </div>
                             </div>
                         </div>
-                        <h3 class="section__personage-name">Холодное сердце</h3>
-                        <a href="#" class="button yellow-btn small-btn">подробее</a>
+                        <h3 class="section__personage-name">Куклы LOL</h3>
+                        <a href="/animators/inner.html" class="button yellow-btn small-btn">подробее</a>
                     </div>
                     <div class="section__personage">
-                        <img class="section__personage-stars" src="img/stars-bg-min.png" alt="звездочки">
+                        <img class="section__personage-stars-s" src="img/stars-s.png" alt="звездочки">
+                        <img class="section__personage-stars-b" src="img/stars-b.png" alt="звездочки">
                         <div class="section__personage-photo">
                             <div class="section__personage-circle-outer">
                                 <div class="section__personage-mask">
@@ -150,11 +154,12 @@
                                 </div>
                             </div>
                         </div>
-                        <h3 class="section__personage-name">Мимимишки</h3>
-                        <a href="#" class="button yellow-btn small-btn">подробее</a>
+                        <h3 class="section__personage-name">Куклы LOL</h3>
+                        <a href="/animators/inner.html" class="button yellow-btn small-btn">подробее</a>
                     </div>
                     <div class="section__personage">
-                        <img class="section__personage-stars" src="img/stars-bg-min.png" alt="звездочки">
+                        <img class="section__personage-stars-s" src="img/stars-s.png" alt="звездочки">
+                        <img class="section__personage-stars-b" src="img/stars-b.png" alt="звездочки">
                         <div class="section__personage-photo">
                             <div class="section__personage-circle-outer">
                                 <div class="section__personage-mask">
@@ -164,11 +169,12 @@
                                 </div>
                             </div>
                         </div>
-                        <h3 class="section__personage-name">Леди Баг и Супер Кот</h3>
-                        <a href="#" class="button yellow-btn small-btn">подробее</a>
+                        <h3 class="section__personage-name">Куклы LOL</h3>
+                        <a href="/animators/inner.html" class="button yellow-btn small-btn">подробее</a>
                     </div>
                     <div class="section__personage">
-                        <img class="section__personage-stars" src="img/stars-bg-min.png" alt="звездочки">
+                        <img class="section__personage-stars-s" src="img/stars-s.png" alt="звездочки">
+                        <img class="section__personage-stars-b" src="img/stars-b.png" alt="звездочки">
                         <div class="section__personage-photo">
                             <div class="section__personage-circle-outer">
                                 <div class="section__personage-mask">
@@ -178,12 +184,12 @@
                                 </div>
                             </div>
                         </div>
-                        <h3 class="section__personage-name">Человек паук</h3>
-                        <a href="#" class="button yellow-btn small-btn">подробее</a>
+                        <h3 class="section__personage-name">Куклы LOL</h3>
+                        <a href="/animators/inner.html" class="button yellow-btn small-btn">подробее</a>
                     </div>
                     <div class="section__personage">
-                        <img class="section__personage-stars" src="img/stars-bg-min.png" alt="звездочки">
-                        <img class="section__personage-stars" src="img/stars-bg-min.png" alt="звездочки">
+                        <img class="section__personage-stars-s" src="img/stars-s.png" alt="звездочки">
+                        <img class="section__personage-stars-b" src="img/stars-b.png" alt="звездочки">
                         <div class="section__personage-photo">
                             <div class="section__personage-circle-outer">
                                 <div class="section__personage-mask">
@@ -193,11 +199,12 @@
                                 </div>
                             </div>
                         </div>
-                        <h3 class="section__personage-name">Сказочный патруль</h3>
-                        <a href="#" class="button yellow-btn small-btn">подробее</a>
+                        <h3 class="section__personage-name">Куклы LOL</h3>
+                        <a href="/animators/inner.html" class="button yellow-btn small-btn">подробее</a>
                     </div>
                     <div class="section__personage">
-                        <img class="section__personage-stars" src="img/stars-bg-min.png" alt="звездочки">
+                        <img class="section__personage-stars-s" src="img/stars-s.png" alt="звездочки">
+                        <img class="section__personage-stars-b" src="img/stars-b.png" alt="звездочки">
                         <div class="section__personage-photo">
                             <div class="section__personage-circle-outer">
                                 <div class="section__personage-mask">
@@ -207,11 +214,12 @@
                                 </div>
                             </div>
                         </div>
-                        <h3 class="section__personage-name">Тачки</h3>
-                        <a href="#" class="button yellow-btn small-btn">подробее</a>
+                        <h3 class="section__personage-name">Куклы LOL</h3>
+                        <a href="/animators/inner.html" class="button yellow-btn small-btn">подробее</a>
                     </div>
                     <div class="section__personage">
-                        <img class="section__personage-stars" src="img/stars-bg-min.png" alt="звездочки">
+                        <img class="section__personage-stars-s" src="img/stars-s.png" alt="звездочки">
+                        <img class="section__personage-stars-b" src="img/stars-b.png" alt="звездочки">
                         <div class="section__personage-photo">
                             <div class="section__personage-circle-outer">
                                 <div class="section__personage-mask">
@@ -221,8 +229,53 @@
                                 </div>
                             </div>
                         </div>
-                        <h3 class="section__personage-name">Пираты</h3>
-                        <a href="#" class="button yellow-btn small-btn">подробее</a>
+                        <h3 class="section__personage-name">Куклы LOL</h3>
+                        <a href="/animators/inner.html" class="button yellow-btn small-btn">подробее</a>
+                    </div>
+                    <div class="section__personage">
+                        <img class="section__personage-stars-s" src="img/stars-s.png" alt="звездочки">
+                        <img class="section__personage-stars-b" src="img/stars-b.png" alt="звездочки">
+                        <div class="section__personage-photo">
+                            <div class="section__personage-circle-outer">
+                                <div class="section__personage-mask">
+                                    <div class="section__personage-circle">
+                                        <img src="img/personage-min.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <h3 class="section__personage-name">Куклы LOL</h3>
+                        <a href="/animators/inner.html" class="button yellow-btn small-btn">подробее</a>
+                    </div>
+                    <div class="section__personage">
+                        <img class="section__personage-stars-s" src="img/stars-s.png" alt="звездочки">
+                        <img class="section__personage-stars-b" src="img/stars-b.png" alt="звездочки">
+                        <div class="section__personage-photo">
+                            <div class="section__personage-circle-outer">
+                                <div class="section__personage-mask">
+                                    <div class="section__personage-circle">
+                                        <img src="img/personage-min.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <h3 class="section__personage-name">Куклы LOL</h3>
+                        <a href="/animators/inner.html" class="button yellow-btn small-btn">подробее</a>
+                    </div>
+                    <div class="section__personage">
+                        <img class="section__personage-stars-s" src="img/stars-s.png" alt="звездочки">
+                        <img class="section__personage-stars-b" src="img/stars-b.png" alt="звездочки">
+                        <div class="section__personage-photo">
+                            <div class="section__personage-circle-outer">
+                                <div class="section__personage-mask">
+                                    <div class="section__personage-circle">
+                                        <img src="img/personage-min.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <h3 class="section__personage-name">Куклы LOL</h3>
+                        <a href="/animators/inner.html" class="button yellow-btn small-btn">подробее</a>
                     </div>
                     <div class="personages__offer">
                         <h3 class="personages__offer-title dark">ДВА ДЕШЕВЛЕ! <img src="img/o1-min.png" alt="Коробочка"></h3>
