--- a/animators/index.html
+++ b/animators/index.html
@@ -272,7 +272,7 @@
                                             </div>
                                             <div class="personages__form-col">
                                                 <input type="tel" placeholder="Ваш телефон">
-                                                <input class="button small-btn violet-btn open__thx" type="submit" value="Заказать праздникк">
+                                                <button class="button small-btn violet-btn open__thx" type="submit">Заказать праздник</button>
                                             </div>
                                         </div>
                                     </form>
@@ -1367,6 +1367,7 @@
                 <input class="popup__input" name="tel" type="tel" placeholder="Телефон">
                 <p class="popup__disclaimer dark">Нажимая кнопку, вы соглашаетесь на передачу и хранение персональных данных</p>
                 <input class="button big-btn violet-btn" value="Заказать звонок" type="submit">
+                <button class="button small-btn violet-btn open__thx" type="submit">Заказать звонок</button>
             </form>
         </div>
     </div>
