--- a/animators/inner.html
+++ b/animators/inner.html
@@ -119,7 +119,7 @@
                                 <div class="item__form-inputs">
                                     <input class="item__form-input" placeholder="Имя" type="text">
                                     <input class="item__form-input" placeholder="Телефон" type="tel">
-                                    <input class="button small-btn yellow-btn" type="submit" value="Заказать!">
+                                    <button class="button small-btn violet-btn open__thx" type="submit">Заказать!</button>
                                 </div>
                             </div>
                         </form>
