--- a/animators/persomages.html
+++ b/animators/persomages.html
@@ -296,7 +296,7 @@
                                 </div>
                                 <div class="personages__form-col">
                                     <input type="tel" placeholder="Ваш телефон">
-                                    <input class="button small-btn violet-btn" type="submit" value="Хочу скидку">
+                                    <button class="button small-btn violet-btn open__thx" type="submit">Хочу скидку</button>
                                 </div>
                             </div>
                         </form>
